fixed "Background and foreground colors do not have a sufficient contrast ratio." problem

--- a/static/assets/style/css/global.css
+++ b/static/assets/style/css/global.css
@@ -37,6 +37,7 @@ h1,h2{
 
 .st{
 	color:#9271E7;
+	font-weight: bold;
 }
 .nd{
 	color:#ECC39A;
